# alea

./: .gitignore  Cargo.toml  DEVELOPMENT.md  GLOSSARY.md  README.md
beacon-microchain/: Cargo.toml
beacon-microchain/src/: lib.rs  linera_integration.rs  state.rs
beacon-microchain/tests/: integration_test.rs
demo/: README.md  index.html  package-lock.json  package.json
demo/src/: App.css  App.tsx  index.css  vite-env.d.ts
demo/src/components/: SlotMachine.css  SlotMachine.tsx
demo/src/hooks/: useEntropy.ts
demo/src/utils/: verification.ts
entropy-aggregator/: Cargo.toml  Makefile
entropy-aggregator/benches/: round_latency.rs
entropy-aggregator/examples/: aggregator_with_linera.rs
entropy-aggregator/src/: aggregation.rs  aggregator.rs  error.rs  lib.rs  linera_client.rs  main.rs  network.rs  state_machine.rs
entropy-aggregator/src/tee/: mock.rs  mod.rs
entropy-aggregator/src/tee/sgx/: enclave.config.xml  enclave.rs  entropy_aggregator.edl  mod.rs  untrusted.rs
entropy-aggregator/tests/: integration_test.rs  linera_submission_test.rs  sgx_mock_comparison_test.rs  tee_integration_test.rs
entropy-client-sdk/: .npmignore  README.md  alea-entropy-client-sdk-0.1.0.tgz  jest.config.js  package-lock.json  package.json  test-implementation.ts  tsconfig.build.json  tsconfig.json
entropy-client-sdk/docs/: README.md  index.html
entropy-client-sdk/examples/: game-integration.ts  simple-request.ts
entropy-client-sdk/scripts/: publish.sh  version.sh
entropy-client-sdk/src/: client.ts  errors.ts  events.ts  index.ts  provider.ts  reconnection.ts  types.ts
entropy-client-sdk/src/__tests__/: client.test.ts  error-handling.test.ts
entropy-worker/: Cargo.toml
entropy-worker/examples/: crypto_bench.rs
entropy-worker/src/: crypto.rs  lib.rs  main.rs  network.rs  test_commitment.rs  worker.rs
scripts/: deploy.sh  profile.sh
tests/: integration_test.rs
tests/e2e/: error-scenarios.test.ts  full-flow.test.ts  jest.config.js  package-lock.json  package.json  performance.test.ts  run-tests.sh  setup.sh  setupTests.ts  tsconfig.json
types/: Cargo.toml
types/src/: lib.rs
