[workspace]
members = [
    "beacon-microchain",
    "entropy-worker",
    "entropy-aggregator",
    "types",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.20"
env_logger = "0.11.2"
thiserror = "1.0.56"
anyhow = "1.0.82"
async-trait = "0.1.77"
rand = "0.8.5"
sha2 = "0.10.8"

[workspace.lints.rust]
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[profile.bench]
debug = true