[package]
name = "beacon-microchain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
linera-sdk = { version = "0.14.0" }
linera-base = { version = "0.14.0" }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = "1.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }