[package]
name = "entropy-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
beacon-microchain = { path = "../beacon-microchain" }
entropy-types = { path = "../types" }
entropy-worker = { path = "../entropy-worker" }
clap = { version = "4.0", features = ["derive"] }
secp256k1 = { version = "0.28", features = ["serde", "global-context", "recovery"] }
serde_json = "1.0"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"

# SGX dependencies (optional)
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", rev = "v1.1.3", optional = true }
sgx_urts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", rev = "v1.1.3", optional = true }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", rev = "v1.1.3", optional = true }

[features]
default = ["mock-tee"]
mock-tee = []
sgx = ["dep:sgx_types", "dep:sgx_urts", "dep:sgx_tstd"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
ed25519-dalek = "2.0"

[[bench]]
name = "round_latency"
harness = false
