[package]
name = "entropy-worker"
version = "0.1.0"
edition = "2021"

[lib]
name = "entropy_worker"
path = "src/lib.rs"

[[bin]]
name = "entropy-worker"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
ring = "0.17"
getrandom = "0.2"
secp256k1 = { version = "0.29", features = ["serde", "recovery"] }
hex = "0.4"
sha2 = "0.10"
entropy-types = { path = "../types" }
rand = "0.8"
serde_json = "1.0"